# fixeatAI

./: .dockerignore  .gitignore  CORREO_TRASPASO_CORTO.txt  CORREO_TRASPASO_PROYECTO.md  Dockerfile  GUIA_USO_CORREOS.md  INTEGRATION-GUIDE.md  LIMPIEZA_PROYECTO.md  Makefile  README.md  REORGANIZACION_DOCS.md  SOLUCION_METADATA_KB.md  docker-compose.yml  env-etl-integration.txt  fix_kb_metadata.py  ingestar_batch.py  ingestar_pdfs.py  ingestar_via_api.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  main.py
chroma_local/: chroma.sqlite3
configs/: taxonomy.json
docs/: FLUJO-SIMPLE.md  FLUJO-VISUAL.md  GUIA-BUSQUEDA-ERRORES.md  IMPLEMENTACION-BUSQUEDA-ERRORES.md  PLAN-DEPLOY-PRODUCCION.md  README.md  SISTEMA-RELEVANCIA-FINAL.md  api.md  arquitectura.md  backlog.md  data.txt  datos.md  diagrama-flujo-completo.md  documentacion-bd-contexto.md  endpoints-pruebas-local.md  entorno-configuracion.md  errores.md  estrategia-extraccion-bd.md  estrategia-mapeo-bd.md  estructura-repo.md  etl-queries-explained.md  evaluacion-busqueda-errores-mejorada.md  flujo-predictor-fallas.drawio  flujo-predictor.puml  flujo.md  guia-completa-etl-bd.md  integracion-llm-local.md  llm.md  mcp-tools.md  mejoras-ia-implementadas.md  mlops.md  orquestador-agentes.md  quickstart.md  roadmap.md  testing.md
frontend/: README.md  chat.html  server.py
mcp/: __init__.py  server_demo.py
partpredictor-scraper/: Pipfile  brands.json  creacion de Proveedores MARSOL.numbers  creacion de Proveedores MARSOL.xlsx  one_probability.py  probability.py  scraper.py  video_tutorial.txt
(+3454 files in other folders)
