[project]
name = "fixeatai"
version = "0.1.0"
description = "Microservicio IA para diagnóstico técnico y validación"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.0",
  "beautifulsoup4>=4.12.3",
  "openai>=1.40.0",
  "pymysql>=1.1.0"
]

[project.optional-dependencies]
ingest_files = [
  "pypdf>=4.0.0",
  "python-docx>=1.1.2",
  "pandas>=2.2.2",
  "openpyxl>=3.1.5"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E","F","I","N"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "mcp*", "services*"]


